# rust-blog-backend

./: .env  Cargo.toml  diesel.toml
.github/workflow/: rust.yml
.github/workflows/: rust.yml
api/: Cargo.toml
api/src/: post_handler.rs
application/: Cargo.toml
application/src/post/: create.rs  delete.rs  mod.rs  publish.rs  read.rs
domain/: Cargo.toml
domain/src/: models.rs  schema.rs
infrastructure/: Cargo.toml
infrastructure/src/: lib.rs
migrations/2025-01-27-123159_create_posts/: up.sql
shared/: Cargo.toml
