[package]
name = "application"
version = "0.1.0"
edition = "2024"

[dependencies]
domain = { path = "../domain" }
infrastructure= { path = "../infrastructure" }
shared = { path = "../shared" }

diesel = { version = "2.2.6", features = ["postgres"] }
serde_json = "1.0.137"
rocket = { version = "0.5.1", features = ["json"] }